스태틱 폴더 경로 추가

--- a/src/main/resources/templates/post/home.html
+++ b/src/main/resources/templates/post/home.html
@@ -342,7 +342,7 @@
     <header>
       <div class="header-inner">
         <div class="brand">
-          <img src="/image/bear.png" alt="곰사육사 로고" class="logo-img" />
+          <img src="./image/bear.png" alt="곰사육사 로고" class="logo-img" />
           <h1>곰사육사 강의 수강생 커뮤니티</h1>
         </div>
 
@@ -564,7 +564,7 @@
           <!-- 데모용 이미지: 필요시 교체 -->
           <img
             class="hero"
-            src="/image/banner.png"
+            src="./image/banner.png"
             alt="곰과 사파리 가이드 일러스트 대체 이미지"
           />
         </div>
