--- a/src/main/resources/templates/login/login.html
+++ b/src/main/resources/templates/login/login.html
@@ -1,17 +1,52 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" lang="ko">
   <head>
     <meta charset="UTF-8" />
-    <title>LoginPage</title>
+    <title>로그인</title>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
+
+    <link rel="stylesheet" th:href="@{/css/style.css}" />
   </head>
+
   <body>
-    <form th:action="@{/login}" method="post">
-      <label for="email">이메일</label>
-      <input type="text" name="email" id="email" required />
-      <label for="password">비밀번호</label>
-      <input type="password" name="pwd" id="password" required />
-      <button type="submit">로그인</button>
-    </form>
-    <a href="/new">회원가입</a>
+    <div class="login-wrapper">
+      <div class="login-card">
+        <h1 class="login-title">로그인</h1>
+
+        <!-- 스프링부트로 POST 전송 -->
+        <form class="login-form" th:action="@{/login}" method="post">
+          <div class="input-group">
+            <input
+              type="email"
+              name="email"
+              placeholder="이메일을 입력하세요"
+              required
+            />
+          </div>
+
+          <div class="input-group">
+            <input
+              type="password"
+              name="password"
+              placeholder="비밀번호를 입력하세요"
+              required
+            />
+          </div>
+
+          <button type="submit" class="btn-login">로그인</button>
+        </form>
+
+        <p class="signup-text">
+          아직 회원이 아니신가요?
+          <a th:href="@{/signup}">회원가입</a>
+        </p>
+      </div>
+    </div>
   </body>
 </html>
