--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -5,9 +5,9 @@
     <footer th:fragment="siteFooter">
       <div class="footer-inner">
         <nav class="footer-links" aria-label="푸터 링크">
-          <a href="#">이용규칙</a>
-          <a href="#">도움말</a>
-          <a href="#">만든이</a>
+          <a href="/footer/rule">이용규칙</a>
+          <a href="/footer/help">도움말</a>
+          <a href="/footer/creator">만든이</a>
         </nav>
         <div>Copyright © 휴먼교육센터 2025</div>
       </div>
