--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -10,9 +10,9 @@
         </div>
 
         <div class="top-actions" aria-label="빠른 메뉴">
-          <span class="pill">모아보기</span>
-          <span class="pill">공감글</span>
-          <span class="pill">홈으로</span>
+          <span class="pill" onclick="location.href='/header/listall'">모아보기</span>
+          <span class="pill" onclick="location.href='/header/like'">공감글</span>
+          <span class="pill" onclick="location.href='/'">홈으로</span>
         </div>
 
         <label class="search" aria-label="검색">
