--- a/src/main/resources/templates/board/list.html
+++ b/src/main/resources/templates/board/list.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org" lang="ko">
   <head>
     <meta charset="UTF-8" />
     <title>게시판 페이지</title>
   </head>
   <body>
+  <div th:replace="fragments/header :: siteHeader"></div>
     <h1>게시판 페이지 이동 성공</h1>
   </body>
 </html>
